--- a/css/source/scss/media/_all.scss
+++ b/css/source/scss/media/_all.scss
@@ -96,6 +96,10 @@
 	.logo-spacer {
 		display: block;
 	}
+
+	.logo {
+		margin-right: 5px;
+	}
 }
 
 @media (min-width: 768px) {
